--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "babel-preset-env": "^1.1.8",
     "chokidar-cli": "^1.2.0",
     "nodemon": "^1.11.0",
-    "precommit-hook": "^3.0.0",
+    "pre-commit": "^1.2.2",
     "standard": "^8.6.0"
   },
   "pre-commit": [
