adding travis yml build

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/index.js",
   "scripts": {
     "start": "node ./dist/index.js",
+    "test": "npm run lint",
     "develop": "nodemon lib/index.js --exec babel-node",
     "build": "babel lib -d dist",
     "prepublish": "npm run build",
